--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -16,3 +16,5 @@ eureka:
       default-zone: http://localhost:8761/eureka
       instance:
         prefer-ip-address: true
+        lease-renewal-interval-in-seconds: 5
+        lease-renewal-duration-in-seconds: 10
