adding act for movie config

--- a/movie-service.yml
+++ b/movie-service.yml
@@ -1,6 +1,8 @@
 server:
   port: ${PORT:${SERVER_PORT:0}}
 
+idRandom: ${random.value}
+
 spring:
   application:
     name: movie-service
@@ -16,6 +18,9 @@ spring:
 
 
 eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
     fetch-registry: true
