--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -5,6 +5,7 @@ spring:
   application:
     name: gateway-service
   cloud:
+    gateway:
       discovery:
         locator:
           enabled: true
