--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -2,6 +2,8 @@ server:
   port: ${PORT:${SERVER_PORT:0}}
 
 spring:
+  application:
+    name: catalog-service
   mongodb:
     embedded:
       version: 4.0.2
