--- a/serie-service.yml
+++ b/serie-service.yml
@@ -2,6 +2,8 @@ server:
   port: ${PORT:${SERVER_PORT:0}}
 
 spring:
+  application:
+    name:serie-service
   mongodb:
     embedded:
       version: 4.0.2
@@ -11,9 +13,6 @@ spring:
       port: 27018
 
 eureka:
-  instance:
-    hostname: localhost
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
     fetch-registry: true
@@ -22,7 +21,7 @@ eureka:
       enabled: true
     service-url:
       default-zone: http://localhost:8761/eureka
-      instance:
-        prefer-ip-address: true
-        lease-renewal-interval-in-seconds: 5
-        lease-expiration-duration-in-seconds: 10
+  instance:
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
