--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -9,8 +9,10 @@ spring:
       version: 4.0.2
   data:
     mongodb:
-      database: catalogdb
-      port: 27019
+      uri: mongodb://localhost:27019/catalogdb
+    username: root
+    password: root
+    authentication-database: admin
 
 eureka:
   client:
