--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -25,6 +25,7 @@ eureka:
         prefer-ip-address: true
         lease-renewal-interval-in-seconds: 5
         lease-renewal-duration-in-seconds: 10
+
 management:
   endpoints:
     web:
@@ -37,7 +38,7 @@ endpoint:
 resilience4j:
   circuitbreaker:
     instances:
-      serie:
+      series:
         slidingWindowType: COUNT_BASED
         slidingWindowSize: 5
         failureRateThreshold: 50
@@ -48,8 +49,8 @@ resilience4j:
         automaticTransitionFromOpenToHalfOpenEnabled: true
 retry:
   instances:
-    serie:
+    series:
     waitDuration: 1000
-    maxAttemps : 3
+    maxAttempts : 3
     retryExceptions:
       - feign.FeignException$InternalServerError
