--- a/serie-service.yml
+++ b/serie-service.yml
@@ -11,6 +11,30 @@ spring:
     mongodb:
       database: seriedb
       port: 27018
+rabbitmq:
+  username: guest
+  password: guest
+  host: localhost
+  port: 5672
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
+
+queue:
+  serie:
+    name: SerieQueue
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  info:
+    env:
+      enabled: true
+  endpoint:
+    info:
+      enabled: true
 
 eureka:
   client:
