--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -17,6 +17,8 @@ spring:
     password: guest
     host: localhost
     port: 5672
+  sleuth:
+    enabled: true
   zipkin:
     base-url: http://localhost:9411/
     enabled: true
