--- a/serie-service.yml
+++ b/serie-service.yml
@@ -11,11 +11,13 @@ spring:
     mongodb:
       database: seriedb
       port: 27018
-rabbitmq:
-  username: guest
-  password: guest
-  host: localhost
-  port: 5672
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+  sleuth:
+    enabled: true
   zipkin:
     base-url: http://localhost:9411/
     enabled: true
