--- a/movie-service.yml
+++ b/movie-service.yml
@@ -33,3 +33,21 @@ eureka:
         prefer-ip-address: true
         lease-renewal-interval-in-seconds: 5
         lease-expiration-duration-in-seconds: 10
+
+sleuth:
+  enabled: true
+zipkin:
+  base-url: http://localhost:9411/
+  enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+      info:
+        env:
+          enabled: true
+      endpoint:
+        info:
+          enabled: true
