--- a/movie-service.yml
+++ b/movie-service.yml
@@ -15,6 +15,11 @@ spring:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+  rabbitmq:
+    user: guest
+    password: guest
+    host: localhost
+    port: 5672
 
 
 eureka:
@@ -34,6 +39,7 @@ eureka:
         lease-renewal-interval-in-seconds: 5
         lease-expiration-duration-in-seconds: 10
 
+
 sleuth:
   enabled: true
 zipkin:
@@ -51,3 +57,9 @@ management:
       endpoint:
         info:
           enabled: true
+
+
+queu:
+  movie:
+    name: MovieQueu
+
