catalog config for circuit breaker

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -37,13 +37,12 @@ management:
     web:
       exposure:
         include: '*'
-  info:
-    env:
+  health:
+    circuitbreakers:
       enabled: true
   endpoint:
-    info:
-      enabled: true
-
+    health:
+      show-details: always
 
 
 
