--- a/movie-service.yml
+++ b/movie-service.yml
@@ -20,6 +20,11 @@ spring:
     password: guest
     host: localhost
     port: 5672
+  sleuth:
+    enabled: true
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
 
 
 eureka:
@@ -39,13 +44,6 @@ eureka:
         lease-renewal-interval-in-seconds: 5
         lease-expiration-duration-in-seconds: 10
 
-
-sleuth:
-  enabled: true
-zipkin:
-  base-url: http://localhost:9411/
-  enabled: true
-
 management:
   endpoints:
     web:
@@ -58,8 +56,7 @@ management:
         info:
           enabled: true
 
-
-queu:
+queue:
   movie:
-    name: MovieQueu
+    name: MovieQueue
 
