--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -64,7 +64,7 @@ eureka:
 resilience4j:
   circuitbreaker:
     instances:
-      series:
+      movies:
         slidingWindowType: COUNT_BASED
         slidingWindowSize: 5
         failureRateThreshold: 50
@@ -75,7 +75,7 @@ resilience4j:
         automaticTransitionFromOpenToHalfOpenEnabled: true
 retry:
   instances:
-    series:
+    movies:
     waitDuration: 1000
     maxAttempts : 3
     retryExceptions:
